force-app/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>스폰서십 계약/권리가 종료되는 날짜.</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>