force-app/main/default/objects/Opportunity/fields/Customer_Needs__c.field-meta.xml
<CustomField>
    <fullName>Customer_Needs__c</fullName>
    <description>Discovery 단계에서 파악한 고객의 실제 요구사항. 어떤 방향의 파트너십/스폰서십을 원하는지, 우리가 무엇을 제공해야 하는지를 자유 서술로 기록. Proposal/Quote 구성의 기초가 됨.</description>
    <label>Customer Needs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>