force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Contact__c</fullName>
    <description>Number of days since Last_Contact_Date__c. Blank when no qualifying Customer Contact has been recorded yet.</description>
    <formula>IF(ISBLANK(Last_Contact_Date__c), null, FLOOR(NOW() - Last_Contact_Date__c))</formula>
    <label>Days Since Last Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>