force-app/main/default/objects/Opportunity/fields/Deal_Note__c.field-meta.xml
<CustomField>
    <fullName>Deal_Note__c</fullName>
    <description>A freeform note capturing important current context that the salesperson should remember about this Opportunity. This is not Activity history, not a task list, and not the same as Next Step.</description>
    <label>Deal Note</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>