force-app/main/default/objects/Opportunity/fields/Decision_Maker_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Accessible__c</fullName>
    <label>Decision Maker Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>가능</fullName>
            </value>
            <value>
                <fullName>부분 가능 (실무자 경유)</fullName>
            </value>
            <value>
                <fullName>불가·미확인</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>