force-app/main/default/objects/Opportunity/fields/Expected_Timing__c.field-meta.xml
<CustomField>
    <fullName>Expected_Timing__c</fullName>
    <label>Target Activation Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>즉시 추진 가능</fullName>
            </value>
            <value>
                <fullName>1~3개월 내</fullName>
            </value>
            <value>
                <fullName>3~6개월 내</fullName>
            </value>
            <value>
                <fullName>탐색 단계(미정)</fullName>
            </value>
            <value>
                <fullName>6개월 이후</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>