force-app/main/default/objects/Opportunity/fields/Last_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Type__c</fullName>
    <description>The type of the most recent qualifying Customer Contact recorded in Last_Contact_Date__c. Automatically maintained by Flow - not intended for manual edit.</description>
    <label>Last Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online Meeting</fullName>
            </value>
            <value>
                <fullName>Offline Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>