force-app/main/default/objects/Opportunity/fields/Open_Tasks_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Tasks_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>완료되지 않은(미완료) Task 개수. Record-Triggered Flow(CA_Update_Opportunity_Next_Activity)가 자동으로 계산합니다.</description>
    <label>Open Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>