force-app/main/default/objects/Opportunity/fields/Overdue_Tasks_Count__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Tasks_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>기한이 지난 미완료 Task 개수. Record-Triggered Flow(CA_Update_Opportunity_Next_Activity)가 자동으로 계산합니다.</description>
    <label>Overdue Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>