force-app/main/default/objects/Opportunity/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <description>Primary Contact(SDO_Sales_Primary_Contact__c)의 Phone을 자동으로 가져오는 formula 필드. Contact 레코드가 원본이며 여기서는 편집할 수 없습니다.</description>
    <formula>SDO_Sales_Primary_Contact__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>