force-app/main/default/objects/Opportunity/fields/SDO_Sales_Project_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Project_Budgeted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>What: Used for deal registration.</description>
    <label>예산/구매 영향력 확인</label>
    <type>Checkbox</type>
</CustomField>