force-app/main/default/objects/Opportunity/fields/SDO_Sales_Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Reason_Lost__c</fullName>
    <description>Closed Lost 시 기록하는 공식 실패 사유. Cloud Alpacas 스폰서십 영업 lifecycle에 맞춘 값. Interaction Intelligence의 objection/signal은 대화 근거(evidence)이고, 이 필드는 최종 business outcome 분류다.</description>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget Unavailable</fullName>
            </value>
            <value>
                <fullName>Competitor Selected</fullName>
            </value>
            <value>
                <fullName>Alternative Channel Selected</fullName>
            </value>
            <value>
                <fullName>Brand Strategy Changed</fullName>
            </value>
            <value>
                <fullName>Commercial Terms Mismatch</fullName>
            </value>
            <value>
                <fullName>Decision Deferred</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>