force-app/main/default/objects/Opportunity/fields/Sponsorship_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Interest_Level__c</fullName>
    <label>Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>높음</fullName>
            </value>
            <value>
                <fullName>보통</fullName>
            </value>
            <value>
                <fullName>낮음</fullName>
            </value>
            <value>
                <fullName>낮음 (초기 탐색 단계)</fullName>
                <isActive>false</isActive>
                <label>낮음 (초기 탐색 단계)</label>
            </value>
            <value>
                <fullName>높음 (적극 검토 중)</fullName>
                <isActive>false</isActive>
                <label>높음 (적극 검토 중)</label>
            </value>
            <value>
                <fullName>보통 (관심 있으나 미확정)</fullName>
                <isActive>false</isActive>
                <label>보통 (관심 있으나 미확정)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>