force-app/main/default/objects/Opportunity/fields/Target_Start_Season__c.field-meta.xml
<CustomField>
    <fullName>Target_Start_Season__c</fullName>
    <description>The baseball season in which the prospective sponsorship is expected to begin. This may remain blank until identified through sales discussions.</description>
    <label>Target Start Season</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>