force-app/main/default/objects/Opportunity/listViews/Partner_Opportunities.listView-meta.xml
<ListView>
    <fullName>Partner_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>PARTNER.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Partner Opportunities</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Channel_Managers</group>
    </sharedTo>
</ListView>