force-app/main/default/objects/Opportunity/listViews/PRM_Opportunity_Overview.listView-meta.xml
<ListView>
    <fullName>PRM_Opportunity_Overview</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>LastActivityDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>PRM Opportunity Overview</label>
</ListView>